signin, signout forms

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -41,7 +41,7 @@ body:after {
 }
 
 .pull-right {
-    padding-left: 75%;
+    padding-left: 65%;
 }
 
 @media (max-width: 540px) {
@@ -53,6 +53,10 @@ body:after {
 .nav-link {
     color: #212529;
     font-weight: 400;
+}
+
+.nav-link :hover {
+    cursor: pointer;
 }
 
 .jumbotron {
@@ -100,6 +104,41 @@ body:after {
     z-index: -1;
     opacity: 0.6;
     /* Here is your opacity */
+}
+
+.modal-content {
+    background: #F2F2F2;
+}
+
+.close {
+    background-color: #fbb034;
+    background-image: linear-gradient(315deg, #fbb034 0%, #ffdd00 74%);
+    border-radius: 8px;
+    border: none;
+}
+
+.form-control {
+    color: #8f8f8f;
+    font-size: 15px;
+    font-weight: 300;
+    letter-spacing: 1px;
+    margin-bottom: 7px;
+    display: block;
+    border-radius: 13px;
+}
+
+.modal-header {
+    align-items: baseline;
+    justify-content: start;
+}
+
+.checkbox {
+    align-content: space-between;
+    padding-left: 20px;
+}
+
+.pull-left {
+    position: left;
 }
 
 .footer {
